k8s/fleetman-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-api-gateway
  namespace: fleetman
  labels:
    app: fleetman-api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fleetman-api-gateway
  template:
    metadata:
      labels:
        app: fleetman-api-gateway
    spec:
      containers:
        - name: app
          image: supinfo4kube/api-gateway:1.1.0
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
  namespace: fleetman
spec:
  selector:
    app: fleetman-api-gateway
  ports:
    - port: 8080
