k8s/fleetman-externalname-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
  namespace: default
spec:
  type: ExternalName
  externalName: fleetman-api-gateway.fleetman.svc.cluster.local
