k8s/fleetman-position-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-position-simulator
  namespace: fleetman
  labels:
    app: fleetman-position-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-position-simulator
  template:
    metadata:
      labels:
        app: fleetman-position-simulator
    spec:
      containers:
        - name: position-simulator
          image: supinfo4kube/position-simulator:1.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-simulator
  namespace: fleetman
  labels:
    app: fleetman-position-simulator
spec:
  clusterIP: None
  selector:
    app: fleetman-position-simulator
