k8s/fleetman-position-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-position-tracker
  namespace: fleetman
  labels:
    app: fleetman-position-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-position-tracker
  template:
    metadata:
      labels:
        app: fleetman-position-tracker
    spec:
      containers:
        - name: position-tracker
          image: supinfo4kube/position-tracker:1.0.1
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
  namespace: fleetman
  labels:
    app: fleetman-position-tracker
spec:
  type: ClusterIP
  selector:
    app: fleetman-position-tracker
  ports:
    - name: http
      port: 8080
      targetPort: http
