k8s/fleetman-web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-web-app
  namespace: fleetman
  labels:
    app: fleetman-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fleetman-web-app
  template:
    metadata:
      labels:
        app: fleetman-web-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
        - name: webapp
          image: supinfo4kube/web-app:1.1.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: nginx-config
          configMap:
            name: fleetman-webapp-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-web-app
  namespace: fleetman
spec:
  type: NodePort
  selector:
    app: fleetman-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
