k8s/fleetman-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-webapp
  namespace: fleetman
  labels:
    app: fleetman-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetman-webapp
  template:
    metadata:
      labels:
        app: fleetman-webapp
    spec:
      containers:
        - name: webapp
          image: supinfo4kube/web-app:1.0.0
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: fleetman-webapp-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
  namespace: fleetman
  labels:
    app: fleetman-webapp
spec:
  type: NodePort
  selector:
    app: fleetman-webapp
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
