k8s/trucks-position-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trucks-position-simulator
  namespace: trucks
  labels:
    app: trucks-position-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trucks-position-simulator
  template:
    metadata:
      labels:
        app: trucks-position-simulator
    spec:
      containers:
        - name: app
          image: supinfo4kube/position-simulator:1.1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "384Mi"
              cpu: "200m"
            limits:
              memory: "768Mi"
              cpu: "400m"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: trucks-position-simulator
  namespace: trucks
  labels:
    app: trucks-position-simulator
spec:
  selector:
    app: trucks-position-simulator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
