k8s/trucks-position-tracker-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: trucks-position-tracker
  namespace: default
  labels:
    app: trucks-position-tracker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: trucks-position-tracker
  namespace: default
subsets:
  - addresses:
      - ip: 10.244.2.50
    ports:
      - name: http
        port: 80
