k8s/trucks-position-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trucks-position-tracker
  namespace: trucks
  labels:
    app: trucks-position-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trucks-position-tracker
  template:
    metadata:
      labels:
        app: trucks-position-tracker
    spec:
      containers:
        - name: app
          image: supinfo4kube/position-tracker:1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: trucks-position-tracker
  namespace: trucks
  labels:
    app: trucks-position-tracker
spec:
  type: ClusterIP
  selector:
    app: trucks-position-tracker
  ports:
    - name: http
      port: 8080
      targetPort: http
